--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vob Referral</title>
+  <title>Trendz Blog</title>
   <style>
     /* Ensure html and body take up full height */
     html, body {
