--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="trendz blog, technology trends, blog iframe, web trends, latest trends, digital trends, apps script blog, tech updates, trend articles,AKfycbyjGwXwfivbMf3AlOxlwGFWda8paa6Zkrrhu8W7JSdCQKDRUJgsKZNI5MdcRtHBNd7DRA">
+  <meta name="description" content="Explore the latest technology trends and updates on Trendz Blog. Stay informed with our up-to-date articles, delivered through an interactive iframe." />
   <title>Trendz Blog</title>
   <style>
     /* Ensure html and body take up full height */
