--- a/index.html
+++ b/index.html
@@ -5,6 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="zimbabwe women vs uae women, trendz blog, technology trends, blog iframe, web trends, latest trends, digital trends, apps script blog, tech updates, trend articles,AKfycbyjGwXwfivbMf3AlOxlwGFWda8paa6Zkrrhu8W7JSdCQKDRUJgsKZNI5MdcRtHBNd7DRA">
   <meta name="description" content="Explore the latest technology trends and updates on Trendz Blog. Stay informed with our up-to-date articles, delivered through an interactive iframe." />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="ESPN Cricinfo">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="theme-color" content="#03a9f4">
+ <meta name="title" content="UAE-W vs ZIM-W Cricket Scorecard, 7th Match, Group B at Abu Dhabi, April 27, 2024">
+  <meta name="description"
+    content="Live Cricket Scoreboard: Get United Arab Emirates Women vs Zimbabwe Women 7th Match, Group B,  cricket scorecard, ICC Women's T20 World Cup Qualifier 2024 dated April 27, 2024.">
+  <meta name="keywords"
+    content="UAE Women vs ZIM Women 7th Match, Group B,cricket scorecard,cricket scoreboard,UAE-W vs ZIM-W,reports,ICC Women's T20 World Cup Qualifier">
+  <meta name="robots" content="index,follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+  <meta name="googlebot" content="index,follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+  <meta property="og:site_name" content="ESPNcricinfo">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="UAE-W vs ZIM-W Cricket Scorecard, 7th Match, Group B at Abu Dhabi, April 27, 2024">
+  <meta property="og:description"
+    content="Live Cricket Scoreboard: Get United Arab Emirates Women vs Zimbabwe Women 7th Match, Group B,  cricket scorecard, ICC Women's T20 World Cup Qualifier 2024 dated April 27, 2024.">
+  <meta property="og:image" content="https://www.espncricinfo.com/static/images/espncricinfo-og.png">
+  <meta property="og:url"
+    content="https://www.espncricinfo.com/series/icc-women-s-t20-world-cup-qualifier-2024-1425615/united-arab-emirates-women-vs-zimbabwe-women-7th-match-group-b-1425644/full-scorecard">
+  <meta property="fb:app_id" content="260890547115">
+  <meta property="fb:pages" content="104266592953439">
+  <meta name="twitter:site" content="@espncricinfo">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:app:name:iphone" content="ESPNcricinfo">
+  <meta name="twitter:app:id:iphone" content="417408017">
+  <meta name="twitter:app:name:googleplay" content="ESPNcricinfo">
+  <meta name="twitter:app:id:googleplay" content="com.july.cricinfo">
+  <meta name="twitter:title"
+    content="UAE-W vs ZIM-W Cricket Scorecard, 7th Match, Group B at Abu Dhabi, April 27, 2024">
+  <meta name="twitter:description"
+    content="Live Cricket Scoreboard: Get United Arab Emirates Women vs Zimbabwe Women 7th Match, Group B,  cricket scorecard, ICC Women's T20 World Cup Qualifier 2024 dated April 27, 2024.">
+  <meta name="twitter:image" content="https://www.espncricinfo.com/static/images/espncricinfo-og.png">
+  <meta itemprop="name" content="UAE-W vs ZIM-W Cricket Scorecard, 7th Match, Group B at Abu Dhabi, April 27, 2024">
+  <meta itemprop="description"
+    content="Live Cricket Scoreboard: Get United Arab Emirates Women vs Zimbabwe Women 7th Match, Group B,  cricket scorecard, ICC Women's T20 World Cup Qualifier 2024 dated April 27, 2024.">
+  <meta itemprop="image" content="https://www.espncricinfo.com/static/images/espncricinfo-og.png">
+  <meta itemprop="publisher" content="ESPNcricinfo">
+  <meta itemprop="url"
+    content="https://www.espncricinfo.com/series/icc-women-s-t20-world-cup-qualifier-2024-1425615/united-arab-emirates-women-vs-zimbabwe-women-7th-match-group-b-1425644/full-scorecard">
+  <meta itemprop="editor" content="ESPNcricinfo">
+  <meta itemprop="headline" content="UAE-W vs ZIM-W Cricket Scorecard, 7th Match, Group B at Abu Dhabi, April 27, 2024">
+  <meta itemprop="sourceOrganization" content="ESPN Digital Media Pvt Ltd">
+  <meta itemprop="keywords"
+    content="UAE Women vs ZIM Women 7th Match, Group B,cricket scorecard,cricket scoreboard,UAE-W vs ZIM-W,reports,ICC Women's T20 World Cup Qualifier">
+   <meta charset="utf-8">
+  <meta name="next-head-count" content="68">
+  <meta http-equiv="origin-trial"
+    content="AlK2UR5SkAlj8jjdEc9p3F3xuFYlF6LYjAML3EOqw1g26eCwWPjdmecULvBH5MVPoqKYrOfPhYVL71xAXI1IBQoAAAB8eyJvcmlnaW4iOiJodHRwczovL2RvdWJsZWNsaWNrLm5ldDo0NDMiLCJmZWF0dXJlIjoiV2ViVmlld1hSZXF1ZXN0ZWRXaXRoRGVwcmVjYXRpb24iLCJleHBpcnkiOjE3NTgwNjcxOTksImlzU3ViZG9tYWluIjp0cnVlfQ==">
+  <meta http-equiv="origin-trial"
+    content="Amm8/NmvvQfhwCib6I7ZsmUxiSCfOxWxHayJwyU1r3gRIItzr7bNQid6O8ZYaE1GSQTa69WwhPC9flq/oYkRBwsAAACCeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZXN5bmRpY2F0aW9uLmNvbTo0NDMiLCJmZWF0dXJlIjoiV2ViVmlld1hSZXF1ZXN0ZWRXaXRoRGVwcmVjYXRpb24iLCJleHBpcnkiOjE3NTgwNjcxOTksImlzU3ViZG9tYWluIjp0cnVlfQ==">
+  <meta http-equiv="origin-trial"
+    content="A9uiHDzQFAhqALUhTgTYJcz9XrGH2y0/9AORwCSapUO/f7Uh7ysIzyszNkuWDLqNYg8446Uj48XIstBW1qv/wAQAAACNeyJvcmlnaW4iOiJodHRwczovL2RvdWJsZWNsaWNrLm5ldDo0NDMiLCJmZWF0dXJlIjoiRmxlZGdlQmlkZGluZ0FuZEF1Y3Rpb25TZXJ2ZXIiLCJleHBpcnkiOjE3Mjc4MjcxOTksImlzU3ViZG9tYWluIjp0cnVlLCJpc1RoaXJkUGFydHkiOnRydWV9">
+  <meta http-equiv="origin-trial"
+    content="A9R+gkZL3TWq+Z7RJ2L0c7ZN7FZD5z4mHmVvjrPitg/EMz9P3j5d3W7Vw5ZR9jtJGmWKltM4BO3smNzpCgwYuwwAAACTeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZXN5bmRpY2F0aW9uLmNvbTo0NDMiLCJmZWF0dXJlIjoiRmxlZGdlQmlkZGluZ0FuZEF1Y3Rpb25TZXJ2ZXIiLCJleHBpcnkiOjE3Mjc4MjcxOTksImlzU3ViZG9tYWluIjp0cnVlLCJpc1RoaXJkUGFydHkiOnRydWV9">
+  <meta http-equiv="origin-trial"
+    content="A+uXoByCfR5HCRAl94AWMQ8Y7DHd3670DSOPWj55vVOoaN/cUpF/r0yk6KbxjLIyaxJ2H3/YX4ZxkiI3srY5oQwAAABreyJvcmlnaW4iOiJodHRwczovL2Nkbi50YWJvb2xhLmNvbTo0NDMiLCJmZWF0dXJlIjoiU2NoZWR1bGVyWWllbGQiLCJleHBpcnkiOjE3MDk2ODMxOTksImlzVGhpcmRQYXJ0eSI6dHJ1ZX0=">
   <title>Trendz Blog</title>
   <style>
     /* Ensure html and body take up full height */
